# twatch2020v3_rs

./: Cargo.toml  README.md  build.rs  diagram.json  sdkconfig.defaults  sdkconfig.defaults.bootloader  twatch2020v3_rs.long-type-9788748086099479761.txt  wokwi.toml
.cargo/: config.toml
.github/: cliff.toml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  feature_request.md
.github/workflows/: autofix.yml  merge.yml
.github/workflows/.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/.github/workflows/: release.yml
src/: 2main.rs  app.rs  axp192.rs  battery.rs  errors.rs  lib.rs  main.rs  main_match2.rs  manager.rs
src/buttons/: button_if.rs  button_if2.rs
src/drivers/: axp.rs  display.rs  mod.rs  touch.rs
