[package]
name = "twatch2020v3-rs"
version = "0.1.0"
authors = ["Placeless <thinkoverheat@gmail.com>"]
edition = "2024"
resolver = "2"
rust-version = "1.88"

[[bin]]
name = "twatch2020v3-rs"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "z"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[dependencies]
esp-idf-svc = "0.51"
esp-idf-hal = "0.45.2" # Add esp-idf-hal dependency
esp-idf-sys = { version = "0.36.1", features = ["panic_handler"] }
embedded-hal = "1.0.0"
anyhow = "1"
embedded-graphics = "0.8"
mipidsi = "0.9"
axp20x = "0.0.3"
pcf8563 = "0.1.2"
mousefood = "0.2.1"
ft6x36 = "0.6.2"
chrono = "0.4.41"
heapless = "0.9.1"
display-interface-spi = "0.5.0"
log = "0.4.28"
once_cell = "1.19.0" # Add once_cell dependency
spin = "0.10.0"

[build-dependencies]
embuild = "0.33.1"

[package.metadata.esp-idf]
chip = "esp32"
